k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spanish-study
  namespace: dale
spec:
  hostnames:
  - dale.pamelia.se
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public
    namespace: edge
    sectionName: dale-https
  rules:
  - backendRefs:
    - name: oauth2-proxy
      port: 4180
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spanish-study-redirect
  namespace: dale
spec:
  hostnames:
  - dale.pamelia.se
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: public
    namespace: edge
    sectionName: dale-http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
